--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "worker": "ts-node worker/index.ts"
+    "worker": "ts-node worker/index.ts",
+    "build-worker": "tsc --project worker/tsconfig.json"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.3",
