--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -1,10 +1,14 @@
 {
-  "extends": "../tsconfig.json",
+  //"extends": "../tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
     "module": "CommonJS",
+    "moduleResolution": "Node",
     "outDir": "./dist",
     "rootDir": ".",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strict": true,
+    "types": ["node"]
   },
   "include": ["./**/*"]
 }
