--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "mammoth": "^1.10.0",
     "next": "15.2.4",
     "next-themes": "latest",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "openai": "^5.15.0",
     "p-queue": "^8.1.0",
     "pdf-parse": "^1.1.1",
@@ -81,6 +81,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/node-fetch": "^2.6.13",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
