--- a/package.json
+++ b/package.json
@@ -78,6 +78,10 @@
     "zod": "3.25.67",
     "zustand": "latest"
   },
+
+  "engines": {
+    "node": "20"
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
